--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.4.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
