--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "antd": "^3.4.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
