--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "antd": "^3.4.1",
+    "echarts": "^4.0.4",
+    "echarts-for-react": "^2.0.8",
+    "moment": "^2.22.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
@@ -19,6 +22,7 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.7.0",
-    "react-app-rewired": "^1.5.0"
+    "react-app-rewired": "^1.5.0",
+    "webpack": "^4.5.0"
   }
 }
