--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.4.1",
     "echarts": "^4.0.4",
     "echarts-for-react": "^2.0.8",
+    "json2csv": "^4.1.2",
     "moment": "^2.22.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
