--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "echarts-for-react": "^2.0.8",
     "json2csv": "^4.1.2",
     "moment": "^2.22.1",
+    "photoswipe": "^4.1.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
