--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.22.1",
     "photoswipe": "^4.1.2",
     "react": "^16.3.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.3.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
