--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.4.1",
+    "axios": "^0.18.0",
     "echarts": "^4.0.4",
     "echarts-for-react": "^2.0.8",
     "json2csv": "^4.1.2",
