--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.7.0",
+    "echarts-wordcloud": "^1.1.3",
     "react-app-rewired": "^1.5.0",
     "webpack": "^4.5.0"
   }
