--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.3.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.3.1",
+    "react-draggable": "^3.0.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
